--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -1,13 +1,25 @@
-<!--events/templates/events/base.html-->
+{% load static %}
+{% load static tailwind_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Party!</title>
+    <title>Events</title>
+    <script type="text/javascript" src="{% static '/events/js/htmx.min.js' %}"></script>
+    {% tailwind_css %}
 </head>
 <body>
-<main>
+<
+<body class="bg-custom-powder-light">
+    <nav class="bg-custom-red">
+        <a href="/"
+            class="inline-block p-4 text-custom-powder-light font-dancing-script text-2xl"
+            >
+            Mes événements
+        </a>
+    </nav>
+<main class="container p-5 m-auto">
     {% block content %}
     {% endblock %}
 </main>
