(feat) event list view created and tests working

--- a/events/templates/event/base.html
+++ b/events/templates/event/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>Events</title>
     <script type="text/javascript" src="{% static '/events/js/htmx.min.js' %}"></script>
-    <script type="text/javascript" src="{% static '/party/js/alpine.min.js' %}" defer></script>
+    <script type="text/javascript" src="{% static '/events/js/alpine.min.js' %}" defer></script>
     {% tailwind_css %}
 </head>
 <body>
